--- a/resume_image.html
+++ b/resume_image.html
@@ -210,6 +210,7 @@
 							<li>2x Product Based Startup Technical Founder</li>
 							<li>Built and scaled a <span style="color: #4bffa5;">social media platform</span> with around <span
 									style="color: #4bffa5;">1,000 active users</span></li>
+							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> 6000+ users</span></li>
 							<li>Designed and implemented <span style="color: #4bffa5;"> 15 web applications</span> across diverse
 								industries</li>
 							<li>Created<span style="color: #4bffa5;"> 9 AI solutions</span> including chatbots, agents, scrapers, ML
@@ -227,7 +228,7 @@
 							<li>Created complete solutions including both user-facing applications and admin panels</li>
 							<li>Delivered solutions for finance, education, events, e-commerce and specialized business tools
 							</li>
-							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> over 2000 users</span></li>
+
 						</ul>
 						<!-- </p> -->
 						<div class="info-list">
