--- a/works_creative.html
+++ b/works_creative.html
@@ -135,12 +135,13 @@
 									<p>2x Startup <strong>Technical Founder</strong></p>
 									<p>2+ years of experience on <strong>AI Agents/LLMs </strong></p>
 									<p>Built social media <strong>1000+ users</strong></p>
+									<p>Built ticketing platform <strong>6000+ users</strong></p>
 									<p>Designed and built <strong>15 webapps</strong></p>
 									<p>Created 9 <strong>AI agents and pipelines</strong></p>
 									<p>Completed <strong>15+ paid client projects</strong></p>
 									<p>Worked on around <strong>30 projects</strong></p>
 									<p>Full-Stack <strong>AI Engineer</strong></p>
-									<p>Built ticketing platform <strong>2000+ users</strong></p>
+
 								</div>
 								<span class="typed-subtitle"></span>
 							</div>
@@ -427,7 +428,7 @@
 									<div class="desc single-post-text">
 										<div class="category">Online Marketplace</div>
 										<h4>Katerout</h4>
-										<h5 style="color:white">Catering Service Marketplace</h5>
+										<h5 style="color:white">U.S. based Catering Marketplace</h5>
 										<p>
 											Katerout is a U.S. based catering service marketplace with active customers placing orders on a
 											regular basis.
