--- a/works_creative.html
+++ b/works_creative.html
@@ -216,7 +216,7 @@
 									<div class="desc single-post-text">
 										<div class="category">AI Agents</div>
 										<h4>AI Project Manager</h4>
-										<h5 style="color:white;">AI Project Managerment Agent</h5>
+										<h5 style="color:white;">AI Project Management Agent</h5>
 										<p>This AI project manager was created for a paid client so that they can improve their work
 											processes. It collects the client's current tasks from ClickUp and produces clear reports based on
 											weekly and monthly goals. The tool sorts tasks, sets priorities, finds possible problems and
