--- a/works_creative.html
+++ b/works_creative.html
@@ -493,7 +493,8 @@
 										<p>
 											This support agent helps customers at SmartGrad, an agency that guides people seeking study abroad
 											options. It now works on their website as a chatbot, replacing the old customer service team. The
-											agent answers student's questions about admissions plus universities for international study.
+											agent answers student's questions about admissions plus universities for international study.It
+											also nurtures the lead and pushes it towards conversion through a CTA.
 
 											The chatbot gives suitable university options when it talks with students to learn their needs. It
 											does so by using a proper RAG process while it accesses data from all SmartGrad affiliate
