--- a/works_creative.html
+++ b/works_creative.html
@@ -826,7 +826,7 @@
 											contains
 										</p>
 										<ul>
-											<li>Accouns Entry</li>
+											<li>Accounts Entry (Double Entry)</li>
 											<li>Inventory Management</li>
 											<li>Invoice Management (Receivables)</li>
 											<li>Customer and Supplier Management</li>
