--- a/works_creative.html
+++ b/works_creative.html
@@ -566,8 +566,8 @@
 										<h5 style="color:white">Ticket Booking and Verfication Platform</h5>
 										<p>
 
-											Bismo's ticketing system is simple yet powerful, now live across multiple events handling over
-											2,000 users booking tickets. The platform can be seamlessly integrated into any event website,
+											Bismo's ticketing system is simple yet powerful, now live across multiple events handling
+											6,000+ users booking tickets. The platform can be seamlessly integrated into any event website,
 											allowing users to book tickets by simply completing a form. Upon booking, users receive their
 											e-tickets via email. These tickets contain QR codes that event organizers can verify using the
 											built-in QR scanner feature of the Bismo platform, creating a complete end-to-end ticketing
