--- a/resume_image.html
+++ b/resume_image.html
@@ -217,7 +217,7 @@
 								pipelines and automation
 								systems for paying clients</li>
 							<li>Completed around<span style="color: #4bffa5;"> 20 paid client</span> projects</li>
-							<li>Built an expense management solution with over <span style="color: #4bffa5;">100 standalone
+							<li>Built an expense management solution with <span style="color: #4bffa5;">100+ standalone
 									features</span></li>
 							<li><span style="color: #4bffa5;">2+ years</span> of experience working with <span
 									style="color: #4bffa5;">AI Agents and LLMs</span> since
