--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 								<p>Completed <strong>15+ paid client projects</strong></p>
 								<p>Worked on around <strong>30 projects</strong></p>
 								<p>Full-Stack <strong>AI Engineer</strong></p>
+								<p>Built cloud infra/devops<strong> for 3
+										companies.</strong> </p>
 
 							</div>
 							<span class="typed-subtitle"></span>
