--- a/resume_image.html
+++ b/resume_image.html
@@ -207,7 +207,7 @@
 						<p>Hello I am Aukik! With the intention of saving your time here is what my career looks so far</p>
 						<!-- <p> -->
 						<ul>
-							<li>2x Product Based Startup Technical Founder</li>
+							<li>2x Product Based <span style="color: #4bffa5;">Startup Technical Founder</span> </li>
 							<li>Built and scaled a <span style="color: #4bffa5;">social media platform</span> with around <span
 									style="color: #4bffa5;">1,000 active users</span></li>
 							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> 6000+ users</span></li>
@@ -225,6 +225,8 @@
 							<li>Developed RAG pipelines and Copilot-like systems before these terms were coined in the market
 							</li>
 							<li>Worked on approximately <span style="color: #4bffa5;">30 projects</span></li>
+							<li> Built and Managed entire <span style="color: #4bffa5;">Infrastructure, CI/CD, Monitoring</span>
+								pipelines on AWS/Azure cloud for <span style="color: #4bffa5;"> 3 different companies.</span></li>
 							<li>Created complete solutions including both user-facing applications and admin panels</li>
 							<li>Delivered solutions for finance, education, events, e-commerce and specialized business tools
 							</li>
