skills updated in works and resume

--- a/resume_image.html
+++ b/resume_image.html
@@ -441,16 +441,16 @@
 								<div class="name">Docker</div>
 							</li>
 							<li>
-								<div class="name">AWS EC2</div>
+								<div class="name">AWS</div>
 							</li>
 							<li>
-								<div class="name">Azure VM</div>
+								<div class="name">Azure</div>
 							</li>
 							<li>
-								<div class="name">S3 Bucket</div>
+								<div class="name">Supabase</div>
 							</li>
 							<li>
-								<div class="name">Azure Blob Storage</div>
+								<div class="name">N8N</div>
 							</li>
 							<li>
 								<div class="name">GitHub</div>
@@ -519,7 +519,7 @@
 								<div class="name">FastApi</div>
 							</li>
 							<li>
-								<div class="name">Python Flask</div>
+								<div class="name">TypeScript</div>
 							</li>
 							<li>
 								<div class="name">RAG</div>
