--- a/works_creative.html
+++ b/works_creative.html
@@ -235,7 +235,7 @@
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
 										<p style="color:white; margin-top:5px;">OpenAI, Azure AI Foundry, Python, FastAPI, Qdrant,
-											LangChain, Streamlit, Pandas, Pydantic, Redis, Azure
+											LangChain, Streamlit, Pandas, Pydantic, Redis, Azure, Pulumi
 
 										</p>
 
@@ -386,7 +386,7 @@
 
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS, Svelte, Postgresql, Prisma
+										<p style="color:white; margin-top:5px;">Express.js, Svelte, Postgresql, Prisma
 											ORM, Azure VM, Docker, Azure blob storage, Jenkins, Terraform, Prometheus, Grafana, Ansible</p>
 										<!-- <p>
 
@@ -449,7 +449,8 @@
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
 										<p style="color:white; margin-top:5px;">Express.js, Vanilla HTML/CSS, Postgresql, PostGIS, Prisma
 											ORM, Azure App
-											Service, Docker, Azure Container Registry, Azure blob storage, Stripe API</p>
+											Service, Docker, Azure Container Registry, Azure blob storage, Stripe API, Terraform, Ansible,
+											Prometheus, Grafana</p>
 										<!-- <p>
 
 
@@ -516,7 +517,7 @@
 											</p>
 
 											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, mongodb, Azure
+											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, Mongodb, Azure
 												Blob Storage, Azure Functions</p>
 											<!-- <a href="https://langchainchatbot-3unenkkbsvf7sttsp4hzct.streamlit.app/"
 												class="btn hover-animated">
@@ -584,7 +585,7 @@
 
 
 										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-										<p style="color:white; margin-top:5px;">Nest.js, React.js, Postgresql, Prisma
+										<p style="color:white; margin-top:5px;">Nest.js, React.js, TypeScript, Postgresql, Prisma
 											ORM, Azure VM, Docker, Pulumi, Ansible</p>
 										<!-- <p>
 
