--- a/resume_image.html
+++ b/resume_image.html
@@ -587,14 +587,15 @@
 								<div class="resume-item content-box active">
 									<div class="date">May 2023 - Present</div>
 									<div class="name">Chief Technology Officer - Bismo</div>
-									<dive class="text">As a Team Lead, I specialize in system architecture, building AI Agents and
+									<dive class="text">I worked on system architecture, building AI Agents and
 										workflow
-										automation pipelines, backend development with Nest.js,
-										Express, PrismaORM, database engineering (especially PostgreSQL), test automation
+										automation pipelines, led a team of 16 people, backend development with Nest.js,
+										Express, TypeScript, PrismaORM, database engineering (especially PostgreSQL), test automation
 										using Jest, SuperTest, and Playwright, implementing Reverse Proxy (Nginx) and CDNs (Cloudflare &
 										Cloudfront), frontend development (React/Svelte), integrating OpenAI APIs via tools like Langchain
 										leveraging RAG techniques (Qdrant),
-										bottleneck discovery and latency minimization with Wireshark and Fiddler, and deployment using
+										bottleneck discovery and latency minimization with Wireshark and Fiddler, maintaining cloud
+										infrastructure like Azure and AWS with IaC tools like Terraform and Pulumi and deployment using
 										Docker containers, Kubernetes and building CI/CD pipelines using Jenkins and Azure Pipelines.</dive>
 								</div>
 
@@ -602,9 +603,9 @@
 									<div class="date">Feb 2024 - Present</div>
 									<div class="name">Chief Technology Officer - Katerout</div>
 									<dive class="text">Built the entire MVP from scratch for a catering marketplace platform. Maintain
-										cloud architecture in Azure using Terraform, Pulumi and Ansible. Set up CI/CD pipelines with Jenkins
+										cloud architecture in Azure using Terraform and Ansible. Set up CI/CD pipelines with Jenkins
 										and
-										implemented monitoring tools such as Prometheus and Grafana.</dive>
+										implemented monitoring tools such as Prometheus and Grafana. Led a team of 10 people.</dive>
 								</div>
 
 								<div class="resume-item content-box">
