Updated project details and added new AI agent showcases, including Lead Generation & Outreach Automation and AI Customer Support Agent. Revised experience descriptions and removed outdated information.

--- a/works_creative.html
+++ b/works_creative.html
@@ -132,15 +132,16 @@
 							<h1 class="h-title">Some of my Works</h1>
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-subtitle" style="display: none;">
+
+									<p>2+ years of experience on <strong>AI Agents/MLOps </strong></p>
+									<p>Created ~10 <strong>AI agents and pipelines</strong></p>
 									<p>2x Startup <strong>Technical Founder</strong></p>
-									<p>2+ years of experience on <strong>AI Agents/LLMs </strong></p>
+									<p>Completed <strong>15+ paid client projects</strong></p>
+									<p>Worked on around <strong>30 projects</strong></p>
 									<p>Built social media <strong>1000+ users</strong></p>
 									<p>Built ticketing platform <strong>6000+ users</strong></p>
 									<p>Designed and built <strong>15 webapps</strong></p>
-									<p>Created 9 <strong>AI agents and pipelines</strong></p>
-									<p>Completed <strong>15+ paid client projects</strong></p>
-									<p>Worked on around <strong>30 projects</strong></p>
-									<p>Full-Stack <strong>AI Engineer</strong></p>
+									<p>Full-Stack <strong>Gen AI Engineer</strong></p>
 
 								</div>
 								<span class="typed-subtitle"></span>
@@ -249,6 +250,99 @@
 							</div>
 						</div>
 
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-182" class="has-popup-media hover-animated">
+									<img src="images/lead_gen.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">AI Agents</span>
+													<span class="name">Lead Generation & Outreach Automation</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-182" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<!-- <iframe src="https://app.sharefable.com/embed/demo/ai-powered-task-manage-y7eof80ukr7xm3kl?mode=video"
+										width="100%" height="250px" style="border: none; display: block;" allowfullscreen
+										allow="fullscreen"></iframe> -->
+									<div class="image"
+										style="background-image: url(images/lead_gen_2.jpg); background-size: 100% auto; height:300px;">
+									</div>
+									<div class="desc single-post-text">
+										<div class="category">AI Agents</div>
+										<h4>Lead Generation & Outreach Automation</h4>
+										<h5 style="color:white;">Google Maps Automated Lead Generation & Customized Email Outreach
+											Automation using AI Agents</h5>
+										<p>This is a lead generation and outreach automation system that transforms location-based searches
+											into personalized business opportunities.</p>
+
+										<div class="features-section">
+											<h4>📊 Lead Generation Features</h4>
+											<ul>
+												<li>Extracts business information from Google Maps based on custom location parameters</li>
+												<li>Automatically visits discovered business websites to collect email addresses</li>
+												<li>Compiles complete business profiles including:
+													<ul>
+														<li>Website URL</li>
+														<li>Business name</li>
+														<li>Location data</li>
+														<li>Business category</li>
+														<li>Contact email</li>
+													</ul>
+												</li>
+												<li>Organizes all data into structured Excel sheets and database entries</li>
+											</ul>
+										</div>
+
+										<div class="outreach-section">
+											<h4>📧 Automated Outreach System</h4>
+											<ul>
+												<li>Analyzes each lead's website using Playwright for content scraping</li>
+												<li>Identifies personalized talking points from website content</li>
+												<li>Evaluates website SEO performance using Lighthouse</li>
+												<li>Generates customized emails with:
+													<ul>
+														<li>Personalized business references</li>
+														<li>Targeted SEO improvement suggestions</li>
+														<li>Custom SEO ranking scores</li>
+													</ul>
+												</li>
+												<li>Delivers emails through Brevos API with complete analytics tracking</li>
+											</ul>
+										</div>
+
+
+
+										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+										<p style="color:white; margin-top:5px;">
+											Did everything from scratch which includes
+											requirements gathering, planning, coding and deployment.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">Gemini, Python, Playwright,
+											LangChain, Streamlit, Pandas, Pydantic, MongoDB, Brevo, Lighthouse
+
+										</p>
+
+										<!-- <a href="https://app.sharefable.com/embed/demo/ai-powered-task-manage-y7eof80ukr7xm3kl"
+											target="_blank" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">View Demo</span>
+										</a> -->
+									</div>
+								</div>
+							</div>
+						</div>
+
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-1" class="has-popup-media hover-animated">
@@ -318,6 +412,132 @@
 											<span class="circle"></span>
 											<span class="lnk">View Demo</span>
 										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-12" class="has-popup-media hover-animated">
+									<img src="images/smartgrad-mockup.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">AI Agent</span>
+													<span class="name">AI Customer Support</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+
+
+							<div id="popup-12" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image"
+										style="background-image: url(images/smartgrad-ai.png); background-size: 100% auto; height:700px;">
+									</div>
+									<div class="desc single-post-text">
+										<div class="category">AI Agent</div>
+										<h4>AI Customer Support Agent</h4>
+										<p>
+											This support agent helps customers at SmartGrad, an agency that guides people seeking study abroad
+											options. It now works on their website as a chatbot, replacing the old customer service team. The
+											agent answers student's questions about admissions plus universities for international study.It
+											also nurtures the lead and pushes it towards conversion through a CTA.
+
+											The chatbot gives suitable university options when it talks with students to learn their needs. It
+											does so by using a proper RAG process while it accesses data from all SmartGrad affiliate
+											universities.
+
+											A separate CV checker was built that lets students send their resume in order to get detailed
+											advice for better improvement.
+
+
+
+										</p>
+
+										<ul>
+											<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+											<p style="color:white; margin-top:5px;">
+												Developed a chatbot microservice using FastAPI, RAG, and Qdrant with a custom knowledge base,
+												and utilized Streamlit to create a visual chat widget. Additionally, created an Azure Function
+												to analyze CVs and provide recommendations for improvement based on the custom knowledge base.
+											</p>
+
+											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, Mongodb, Azure
+												Blob Storage, Azure Functions</p>
+											<!-- <a href="https://langchainchatbot-3unenkkbsvf7sttsp4hzct.streamlit.app/"
+												class="btn hover-animated">
+												<span class="circle"></span>
+												<span class="lnk">View Chatbot</span>
+
+											</a> -->
+											<a href="https://smartgrad.org" class="btn hover-animated" target="_blank">
+												<span class="circle"></span>
+												<span class="lnk">View Website</span>
+
+											</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-11" class="has-popup-media hover-animated">
+									<img src="images/chatbot2.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">CHATBOT</span>
+													<span class="name">Virtual Assistant</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+
+
+							<div id="popup-11" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image"
+										style="background-image: url(images/chatbot2.png); background-size: 100% auto; height:600px;"></div>
+									<div class="desc single-post-text">
+										<div class="category">BOT</div>
+										<h4>Virtual Assistant</h4>
+										<p>
+											The virtual assistant is a versatile AI-powered tool designed to assist with a wide range of
+											tasks. It constantly learns and evolves aiming to provide the best possible support by generating
+											analytics and insights of my every single interaction with it.
+
+											<li>Assists with answering questions, providing information, and completing tasks</li>
+											<li>Continuously learns and improves its capabilities</li>
+											<li>Gathers information from the notes that I make in Obsidian note-taking application</li>
+										</p>
+										<ul>
+
+
+											<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+											<p style="color:white; margin-top:5px;">
+												Developed a personal virtual assistant in the form of a chatbot with a user interface, utilizing
+												my notes from Obsidian as a custom knowledge base to assist with various tasks.
+											</p>
+
+											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG</p>
+											<!-- <a href="#" class="btn hover-animated">
+												<span class="circle"></span>
+												<span class="lnk">View Project</span>
+											</a> -->
 									</div>
 								</div>
 							</div>
@@ -464,76 +684,7 @@
 							</div>
 						</div>
 
-						<div class="box-item f-content">
-							<div class="image">
-								<a href="#popup-12" class="has-popup-media hover-animated">
-									<img src="images/smartgrad-mockup.png" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-plus"></span>
-												<span class="desc">
-													<span class="category">AI Agent</span>
-													<span class="name">AI Customer Support</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
 
-
-							<div id="popup-12" class="popup-box mfp-fade mfp-hide">
-								<div class="content">
-									<div class="image"
-										style="background-image: url(images/smartgrad-ai.png); background-size: 100% auto; height:700px;">
-									</div>
-									<div class="desc single-post-text">
-										<div class="category">AI Agent</div>
-										<h4>AI Customer Support Agent</h4>
-										<p>
-											This support agent helps customers at SmartGrad, an agency that guides people seeking study abroad
-											options. It now works on their website as a chatbot, replacing the old customer service team. The
-											agent answers student's questions about admissions plus universities for international study.It
-											also nurtures the lead and pushes it towards conversion through a CTA.
-
-											The chatbot gives suitable university options when it talks with students to learn their needs. It
-											does so by using a proper RAG process while it accesses data from all SmartGrad affiliate
-											universities.
-
-											A separate CV checker was built that lets students send their resume in order to get detailed
-											advice for better improvement.
-
-
-
-										</p>
-
-										<ul>
-											<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
-											<p style="color:white; margin-top:5px;">
-												Developed a chatbot microservice using FastAPI, RAG, and Qdrant with a custom knowledge base,
-												and utilized Streamlit to create a visual chat widget. Additionally, created an Azure Function
-												to analyze CVs and provide recommendations for improvement based on the custom knowledge base.
-											</p>
-
-											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG, Mongodb, Azure
-												Blob Storage, Azure Functions</p>
-											<!-- <a href="https://langchainchatbot-3unenkkbsvf7sttsp4hzct.streamlit.app/"
-												class="btn hover-animated">
-												<span class="circle"></span>
-												<span class="lnk">View Chatbot</span>
-
-											</a> -->
-											<a href="https://smartgrad.org" class="btn hover-animated" target="_blank">
-												<span class="circle"></span>
-												<span class="lnk">View Website</span>
-
-											</a>
-									</div>
-								</div>
-							</div>
-						</div>
 
 						<div class="box-item f-content">
 							<div class="image">
@@ -743,60 +894,7 @@
 							</div>
 						</div> --> -->
 
-						<div class="box-item f-content">
-							<div class="image">
-								<a href="#popup-11" class="has-popup-media hover-animated">
-									<img src="images/chatbot2.png" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-plus"></span>
-												<span class="desc">
-													<span class="category">CHATBOT</span>
-													<span class="name">Virtual Assistant</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
 
-
-							<div id="popup-11" class="popup-box mfp-fade mfp-hide">
-								<div class="content">
-									<div class="image"
-										style="background-image: url(images/chatbot2.png); background-size: 100% auto; height:600px;"></div>
-									<div class="desc single-post-text">
-										<div class="category">BOT</div>
-										<h4>Virtual Assistant</h4>
-										<p>
-											The virtual assistant is a versatile AI-powered tool designed to assist with a wide range of
-											tasks. It constantly learns and evolves aiming to provide the best possible support by generating
-											analytics and insights of my every single interaction with it.
-
-											<li>Assists with answering questions, providing information, and completing tasks</li>
-											<li>Continuously learns and improves its capabilities</li>
-											<li>Gathers information from the notes that I make in Obsidian note-taking application</li>
-										</p>
-										<ul>
-
-
-											<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
-											<p style="color:white; margin-top:5px;">
-												Developed a personal virtual assistant in the form of a chatbot with a user interface, utilizing
-												my notes from Obsidian as a custom knowledge base to assist with various tasks.
-											</p>
-
-											<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
-											<p style="color:white; margin-top:5px;">FastAPI, Streamlit, Langchain, Qdrant, RAG</p>
-											<!-- <a href="#" class="btn hover-animated">
-												<span class="circle"></span>
-												<span class="lnk">View Project</span>
-											</a> -->
-									</div>
-								</div>
-							</div>
-						</div>
 
 						<div class="box-item f-content">
 							<div class="image">
