Enhanced resume details by updating experience descriptions, highlighting AI and MLOps expertise, and correcting company affiliation. Removed outdated information and ensured consistency across project descriptions.

--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
 								of Bismo and Katerout.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
+								<p>2+ years of experience on <strong>AI Agents/MLOps </strong></p>
+								<p>Full-Stack <strong>Gen AI Engineer</strong></p>
+								<p>Created ~10 <strong>AI agents and pipelines</strong></p>
+								<p>Worked on around <strong>30 projects</strong></p>
+								<p>Completed <strong>15+ paid client projects</strong></p>
+								<p>Designed and built <strong>15 webapps</strong></p>
 								<p>2x Startup <strong>Technical Founder</strong></p>
-								<p>2+ years of experience on <strong>AI Agents/LLMs </strong></p>
 								<p>Built social media <strong>1000+ users</strong></p>
 								<p>Built ticketing platform <strong>6000+ users</strong></p>
-								<p>Designed and built <strong>15 webapps</strong></p>
-								<p>Created 9 <strong>AI agents and pipelines</strong></p>
-								<p>Completed <strong>15+ paid client projects</strong></p>
-								<p>Worked on around <strong>30 projects</strong></p>
-								<p>Full-Stack <strong>AI Engineer</strong></p>
 								<p>Built cloud infra/devops<strong> for 3
 										companies.</strong> </p>
 
