--- a/resume_image.html
+++ b/resume_image.html
@@ -207,27 +207,38 @@
 						<p>Hello I am Aukik! With the intention of saving your time here is what my career looks so far</p>
 						<!-- <p> -->
 						<ul>
-							<li>2x Product Based <span style="color: #4bffa5;">Startup Technical Founder</span> </li>
-							<li>Built and scaled a <span style="color: #4bffa5;">social media platform</span> with around <span
-									style="color: #4bffa5;">1,000 active users</span></li>
-							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> 6000+ users</span></li>
-							<li>Designed and implemented <span style="color: #4bffa5;"> 15 web applications</span> across diverse
-								industries</li>
-							<li>Created<span style="color: #4bffa5;"> 9 AI solutions</span> including chatbots, agents, scrapers, ML
-								pipelines and automation
-								systems for paying clients</li>
-							<li>Completed around<span style="color: #4bffa5;"> 20 paid client</span> projects</li>
-							<li>Built an expense management solution with <span style="color: #4bffa5;">100+ standalone
-									features</span></li>
 							<li><span style="color: #4bffa5;">2+ years</span> of experience working with <span
-									style="color: #4bffa5;">AI Agents and LLMs</span> since
-								OpenAI's inception</li>
+									style="color: #4bffa5;">AI Agents and MLOps</span> since OpenAI's inception</li>
+
 							<li>Developed RAG pipelines and Copilot-like systems before these terms were coined in the market
 							</li>
+
 							<li>Worked on approximately <span style="color: #4bffa5;">30 projects</span></li>
+
+							<li>Designed and implemented <span style="color: #4bffa5;"> 15 web applications</span> across diverse
+								industries</li>
+
+							<li>Completed around<span style="color: #4bffa5;"> 20 paid client</span> projects</li>
+
+							<li>2x Product Based <span style="color: #4bffa5;">Startup Technical Founder</span> </li>
+
+							<li>Built and scaled a <span style="color: #4bffa5;">social media platform</span> with around <span
+									style="color: #4bffa5;">1,000 active users</span></li>
+
+							<li>Built a ticketing platform for events with <span style="color: #4bffa5;"> 6000+ users</span></li>
+
+							<li>Created<span style="color: #4bffa5;"> ~10 AI solutions</span> including chatbots, agents, scrapers, ML
+								pipelines and automation
+								systems for paying clients</li>
+
+							<li>Built an expense management solution with <span style="color: #4bffa5;">100+ standalone
+									features</span></li>
+
 							<li> Built and Managed entire <span style="color: #4bffa5;">Infrastructure, CI/CD, Monitoring</span>
 								pipelines on AWS/Azure cloud for <span style="color: #4bffa5;"> 3 different companies.</span></li>
+
 							<li>Created complete solutions including both user-facing applications and admin panels</li>
+
 							<li>Delivered solutions for finance, education, events, e-commerce and specialized business tools
 							</li>
 
@@ -236,7 +247,7 @@
 						<div class="info-list">
 							<ul>
 								<li><strong>Current Position: </strong>CTO</li>
-								<li><strong>Company:</strong> Bismo</li>
+								<li><strong>Company:</strong> Katerout</li>
 								<li><strong>Phone:</strong> +880 168 007 7890</li>
 								<li><strong>E-mail:</strong> aukikaurnabx@gmail.com</li>
 							</ul>
