Added new project showcases for an AI Team Management Platform and industry-specific chatbots, detailing features, roles, and technology stacks used. Enhanced portfolio with comprehensive descriptions and demo links.

--- a/works_creative.html
+++ b/works_creative.html
@@ -194,6 +194,67 @@
 
 						<div class="box-item f-content">
 							<div class="image">
+								<a href="#popup-184" class="has-popup-media hover-animated">
+									<img src="images/agent_gg_1.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">AI Agents</span>
+													<span class="name">AI Team Management Platform</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-184" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image"
+										style="background-image: url(images/agent_gg_2.png); background-size: 100% auto; height:300px;">
+									</div>
+									<div class="desc single-post-text">
+										<div class="category">AI Agents</div>
+										<h4>AI Team Management Platform</h4>
+										<h5 style="color:white;">Team Management Ecosystem Powered by AI</h5>
+										<p>A powerful team management platform for entrepreneurs and managers designed to provide
+											organizational
+											clarity and task prioritization. The system uses AI to assist with various management tasks while
+											maintaining context of team information, company knowledge, and priorities.</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Key Features: </h5>
+										<ul>
+											<li>AI-powered task prioritization with automatic blocker identification</li>
+											<li>Contextual chat interface with source-cited responses</li>
+											<li>Knowledge base-restricted responses with document preview options</li>
+											<li>Team skill mapping and workload optimization</li>
+											<li>Structured knowledge base with intelligent document categorization</li>
+											<li>Smart calendar integration with automated reporting</li>
+											<li>Real-time competitor monitoring with customizable alerts</li>
+										</ul>
+
+										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+										<p style="color:white; margin-top:5px;">
+											Built everything from scratch, including frontend and backend development, UI design, hosting, and
+											maintenance. Handled the entire architecture and development workflow for this
+											platform, from initial design to deployment.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">React.js, FastAPI, Langchain, n8n, Qdrant, MongoDB</p>
+
+										<a href="https://chatgpt-clone-six-nu.vercel.app/chat" target="_blank" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">View Demo</span>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
 								<a href="#popup-103" class="has-popup-media hover-animated">
 									<img src="images/ai-assistant.png" class="wp-post-image" alt="" />
 									<span class="info circle">
@@ -333,11 +394,66 @@
 
 										</p>
 
-										<!-- <a href="https://app.sharefable.com/embed/demo/ai-powered-task-manage-y7eof80ukr7xm3kl"
-											target="_blank" class="btn hover-animated">
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-183" class="has-popup-media hover-animated">
+									<img src="images/customer_booking_2.png" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">AI Agents</span>
+													<span class="name">Industry-specific Chatbots</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-183" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image"
+										style="background-image: url(images/customer_booking_1.png); background-size: 100% auto; height:300px;">
+									</div>
+									<div class="desc single-post-text">
+										<div class="category">AI Agents</div>
+										<h4>Industry-specific Chatbots</h4>
+										<h5 style="color:white;">Three Specialized Chatbots for Dental Clinics, Law Firms, and Medspas</h5>
+										<p>Built three industry-specific chatbots for Pipeline AI serving dental clinics, law firms, and
+											medspas. These chatbots handle customer inquiries, capture leads, and book appointments
+											automatically.</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Key Features: </h5>
+										<ul>
+											<li>Custom knowledge bases with company-specific information</li>
+											<li>Natural conversation flow with GPT-4o</li>
+											<li>Lead capture (name, phone, service interest)</li>
+											<li>Automated appointment booking</li>
+											<li>Google Sheets integration for lead tracking</li>
+											<li>Automated email notifications</li>
+										</ul>
+
+										<h5 style="color:white; margin-bottom:5px;">My Role: </h5>
+										<p style="color:white; margin-top:5px;">
+											Developed complete solutions including chatbot interfaces, knowledge bases, and integrations with
+											third-party services.
+										</p>
+
+										<h5 style="color:white; margin-bottom:5px;">Stack Used: </h5>
+										<p style="color:white; margin-top:5px;">React.js, n8n, GPT-4o, Google Sheets API, Email integration
+										</p>
+
+										<a href="https://demo.pipelineai.dev/" target="_blank" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Demo</span>
-										</a> -->
+										</a>
 									</div>
 								</div>
 							</div>
@@ -1266,5 +1382,7 @@
 	<script src="js/scripts.js"></script>
 
 </body>
+
+</html>
 
 </html>
