Updated project title from "Lead Generation & Outreach Automation" to "Lead Generation & AI Outreach Automation" for consistency and clarity in the works showcase.

--- a/works_creative.html
+++ b/works_creative.html
@@ -322,7 +322,7 @@
 												<span class="icon fas fa-plus"></span>
 												<span class="desc">
 													<span class="category">AI Agents</span>
-													<span class="name">Lead Generation & Outreach Automation</span>
+													<span class="name">Lead Generation & AI Outreach Automation</span>
 												</span>
 											</span>
 										</span>
@@ -339,7 +339,7 @@
 									</div>
 									<div class="desc single-post-text">
 										<div class="category">AI Agents</div>
-										<h4>Lead Generation & Outreach Automation</h4>
+										<h4>Lead Generation & AI Outreach Automation</h4>
 										<h5 style="color:white;">Google Maps Automated Lead Generation & Customized Email Outreach
 											Automation using AI Agents</h5>
 										<p>This is a lead generation and outreach automation system that transforms location-based searches
