--- a/works_creative.html
+++ b/works_creative.html
@@ -216,7 +216,7 @@
 									</div>
 									<div class="desc single-post-text">
 										<div class="category">AI Agents</div>
-										<h4>AI Team Management Platform</h4>
+										<h4>AI Team Management Platform (On-going)</h4>
 										<h5 style="color:white;">Team Management Ecosystem Powered by AI</h5>
 										<p>A powerful team management platform for entrepreneurs and managers designed to provide
 											organizational
